# MCP-hackathon

./: README.md  coder.mdc  mcp_mouse_keyboard_server.py  pyproject.toml  test.py
.cursor/rules/: Coding_Guidelines.mdc  context.mdc
claudeDesktop/findMCP/: getNewMcp.py  research_server.py
claudeDesktop/functions/: findMCP.py  getConfig.pyt
servers/: tool_creator_server.py
servers/tools/default/: coder_setup.py
servers/tools/file_ops/: __init__.py  list_files.py
